packages/webgl-video-editor/src/css/assetbin.module.css
.assetbin {
    padding: 0.75rem;
    background-color: var(--gray);
    border-radius: 1.5rem 1.5rem 0rem 0rem;
}

.assetbinAssetsContainer {
    display: grid;
    gap: 0.5rem;
    grid-template-columns: repeat(auto-fit, minmax(6.25rem, 7.95rem));
    justify-content: center;
    justify-items: center;
}

.assetbinHeader {
    display: flex;
    align-items: center;
    position: relative;
    padding-bottom: 1rem;
}

.assetbinHeader h2 {
    position: absolute;
    left: 50%;
    transform: translateX(-50%);
    margin: 0;
}

.assetbinAsset img {
    width: 7.938rem;
    height: 5.313rem;
    border-radius: 0.5rem;
}

